@@ -1,3 +1,7 @@
+20040617
+ - (dtucker) [regress/scp.sh] diff -N is not portable (but needed for some
+   platforms), so test if diff understands it.  Pointed out by tim@, ok djm@
+
 20040616
  - (dtucker) [openbsd-compat/port-aix.c] Expand whitespace -> tabs. No
    code changes.
@@ -1251,4 +1255,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3398 2004/06/16 13:24:19 dtucker Exp $
+$Id: ChangeLog,v 1.3399 2004/06/17 05:18:32 dtucker Exp $
